Remove max JDK version check